# TwoTone

./: .gitignore  .gitmodules  .mergify.yml  README.md  encode.py  mypy.ini  pyproject.toml  requirements.txt  transcode.py
.github/: dependabot.yml
.github/scripts/: group_mypy_blocks.py
.github/workflows/: audio-alignment-debug.yml  mypy.yml  publish.yml  python-compile.yml  unittests.yml
scripts/: generate_tool_fixtures.py
tests/: common.py  conftest.py  test_concatenate.py  test_encode.py  test_language_fixer.py  test_melt.py  test_merge_errors_reaction.py  test_merge_language_detection.py  test_merge_subtitles.py  test_merge_subtitles_conversion.py  test_mkvmerge_subtitle_formats.py  test_phash.py  test_subtitles_fixer.py  test_transcoder.py  test_twotone_unit.py  test_utilities_scenes.py  test_utils.py  test_video_fixer.py
tests/chapters/: simple_chapters.txt
tests/concatenate/: test_concatenate.py  test_concatenate_unit.py
tests/language_fixer/: test_language_fixer.py  test_language_fixer_unit.py
tests/melt/: AUDIO_ALIGNMENT_DEBUG_GUIDE.md  debug_audio_alignment.py  helpers.py  probe_priming.py  test_analyzer_unit.py  test_audio_alignment.py  test_integration.py  test_melt.py  test_pair_matcher_integration.py  test_pair_matcher_unit.py  test_performer_unit.py  test_plan_unit.py  test_streams_picker.py
tests/merge/: test_merge_unit.py  test_subtitles.py  test_subtitles_conversion.py
tests/subtitles_fixer/: test_fixer_unit.py  test_subtitles_fixer.py  test_subtitles_fixer_unit.py
tests/transcode/: test_transcoder.py  (+1 more)
twotone/: twotone.py
(+50 files in other folders)
